# AppleGEMM

./: CMakeLists.txt  README.md  aarch64.h  apple_amx.h  apple_gemm.h  conanfile.txt
.github/workflows/: ci.yml
tests/: CMakeLists.txt  GEMMBenchmark.cpp  GEMMTest.cpp  MMBenchmark.cpp  MMTest.cpp  MatMulBenchmark.cpp  MatMulTest.cpp  TestUtils.cpp  TestUtils.h
